--- a/antre.css
+++ b/antre.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "mazius";
-    src: url("./font/Mazius\ Display\ Extraitalic.otf");
+    src: url("./font/Mazius\ Display\ Regular.otf");
 }
 
 * {
@@ -76,6 +76,10 @@ a:visited {
     text-decoration: none;
 }
 
+p {
+    text-indent: 15%;
+}
+
 .titre {
     font-size: 20em;
     font-family: 'mazius';
@@ -106,13 +110,18 @@ a:visited {
     padding: 0.1em 0em 0em 0em;
 }
 
+.logo {
+    text-indent: 0%;
+    line-height: 40px;
+}
+
 div#colonne1 {
     font-family: "mazius";
     cursor: crosshair;
     font-size: 2em;
     color: black;
     float: left;
-    width: 40vh;
+    width: 52vh;
     padding: 2em 0em 1em 1em;
     background: rgb(110, 177, 129);
 }
@@ -122,7 +131,7 @@ div#colonne2 {
     font-size: 2em;
     color: black;
     float: right;
-    width: 39vh;
+    width: 41vh;
     height: 100vh;
     margin-left: 10px;
     background: rgb(110, 177, 129);
@@ -142,37 +151,14 @@ div#centre {
     flex: auto;
     cursor: crosshair;
     overflow-y: scroll;
-    padding: 4em 0em 0em 0em;
-}
-
-.labeur {
-    color: black;
-    font-family: "mazius";
-    flex: auto;
-    width: 22%;
-    height: 60vh;
-    overflow-y: scroll;
-    text-align: left;
-    padding: 1em 0 1em 1em;
-}
-
-td img {
-    display: block;
-    max-height: 100%;
-    max-width: 100%;
-}
-
-#b {
-    display: flex;
-    flex-direction: row;
-    width: 100vw;
+    padding: 0em 0em 0em 0em;
 }
 
 #whitespace {
     min-width: 25vw;
 }
 
-.infobulle1 {
+.infobulle {
     /* les .infobulle deviennent référents */
     cursor: crosshair;
 }
@@ -182,18 +168,17 @@ td img {
     position: absolute;
     background-color: white;
     font-size: 0.9em;
-    font-style: italic;
-    width: 15vw;
+    text-indent: 15%;
+    width: 20vw;
     height: auto;
     color: black;
     content: attr(aria-label);
-    /*column-count: 2;*/
-    bottom: 20%;
+    bottom: 5%;
     right: 2%;
     z-index: 1;
     text-align: left;
     /* pour s'afficher au dessus des éléments en position relative */
-    white-space: normal;
+    white-space: pre-line;
     /* on interdit le retour à la ligne */
     margin-left: 1em;
     padding: 0.5em 1em;
