--- a/antre.css
+++ b/antre.css
@@ -355,17 +355,22 @@ Design by Clémence Fontaine           `--------'
             padding-bottom: 0.5em;
         }
         .photo img {
-            margin: 0 0 1em 0;
+            margin: 0 0 0.5em 0;
             width: 45vw;
             height: auto;
         }
         div#colonne1 {
-            width: 100%;
+            width: 95%;
             padding: 2em 0em 1em 1em;
         }
         div#colonne2 {
-            width: 100%;
+            width: 95%;
             height: auto;
             padding: 0em 10em 0em 0.5em;
+        }
+        div#centre {
+            width: 95%;
+            height: auto;
+            padding: 0em 0em 0em 0.5em;
         }
     }
